cs352/proj3/tests/syntax/invalid/3.js
<script type="text/JavaScript">
while(1)
	var x;
}
</script>
